--- a/about.html
+++ b/about.html
@@ -382,6 +382,20 @@
             <ul class="footer-links">
               <li><a href="about.html">Haqqımızda</a></li>
               <li><a href="contact.html">Əlaqə</a></li>
+              <li>
+                <a href="./docs/İstifadə Şərtləri.pdf">İstifadə Şərtləri </a>
+              </li>
+              <li>
+                <a href="./docs/məxfilik siyasəti.pdf">Məxfilik Siyasəti</a>
+              </li>
+              <li>
+                <a href="./docs/məsafədən satış.pdf"
+                  >Məsafədən Satış politikası</a
+                >
+              </li>
+              <li>
+                <a href="./docs/qaytarma şərtləri.pdf">Qaytarma Şərtləri</a>
+              </li>
             </ul>
           </div>
 
