Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -256,19 +256,19 @@
             <ul class="footer-links">
               <li><a href="about.html">Haqqımızda</a></li>
               <li><a href="contact.html">Əlaqə</a></li>
-                            <li>
-                <a href="./docs/İstifadə Şərtləri.pdf">İstifadə Şərtləri </a>
+              <li>
+                <a href="./docs/istifadeshertleri.pdf">İstifadə Şərtləri </a>
               </li>
               <li>
-                <a href="./docs/məxfilik siyasəti.pdf">Məxfilik Siyasəti</a>
+                <a href="./docs/mexfiliksiyaseti.pdf">Məxfilik Siyasəti</a>
               </li>
               <li>
-                <a href="./docs/məsafədən satış.pdf"
+                <a href="./docs/mesafedensatish.pdf"
                   >Məsafədən Satış politikası</a
                 >
               </li>
               <li>
-                <a href="./docs/qaytarma şərtləri.pdf">Qaytarma Şərtləri</a>
+                <a href="./docs/qaytarmashertleri.pdf">Qaytarma Şərtləri</a>
               </li>
             </ul>
           </div>
